2005-05-10  Pavel Roskin  <proski@gnu.org>

	* *.c: Remove duplicate includes.

2005-05-03  Pavel Roskin  <proski@gnu.org>

	* edit-widget.h: Use char instead of unsigned char to fix
	warnings from gcc 4.0.
	* editcmd.c: Likewise.

	* edit.h: Use D_ERROR for edit_error_dialog, D_NORMAL for query
	dialogs.  Remove unused edit_query_dialog4.

2005-04-27  Leonard den Ottolander  <leonard * den ottolander nl>

	* editdraw.c (status_string): Added casts on 2 parameters to
	g_snprintf.

2005-03-17  Pavel Roskin  <proski@gnu.org>

	* editcmd.c (edit_replace_cmd): Restore correct behavior of
	Shift-F4.

2005-02-22  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed unnecessary #include directives ...
	* *.c: ... and added them here.

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* editdraw.c: Renamed redraw_labels to buttonbar_redraw.
	* editwidget.c: Likewise. Renamed define_label_data to
	buttonbar_set_label_data.

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Reformatted #definitions.
	* editcmd.c: Explicitly declared unused variables to make gcc
	quiet.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* *.c: Removed trailing whitespace.
	* *.c: Removed unused parameters for static functions. Marked
	unused parameters for global functions. Removed redundant
	comments.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed catstrs, as it is only used in editcmd.c.
	* editcmd.c (catstrs): Changed declaration to be static.
	* editcmd.c: Added const qualifiers.
	* syntax.c: Don't use catstrs anymore.
	* edit.c (user_menu): Likewise.
	* editwidget.c: Likewise.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* edit.c: Improved message formatting.

2005-01-30  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed NO_INLINE_GETBYTE conditional. The name was
	misleading, as it really meant INLINE_GETBYTE. Furthermore,
	it has not been working since the split of edit.h into edit-widget.h.
	* edit.c: Likewise.
